# python-project-83

./: .gitignore  Makefile  README.md  __init__.py  build.sh  conftest.py  database.sql  db_manager.py  pyproject.toml  routes.py  ruff.toml  run.py  test_page_analyzer.py  urls.html
.github/workflows/: p-83.yml
code/page_analyzer/: routes.py
page_analyzer/: __init__.py  app.py  db_manager.py  html_manager.py  routes.py  validation_manager.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
tests/: conftest.py  test_page_analyzer.py
