[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "SEO Analyzer for web-projects"
authors = [{ name = "DomoSpb" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "flask>=2.3.3,<3.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "validators>=0.20.0,<0.21.0",
    "requests>=2.31.0,<3.0.0",
    "click>=8.1.7,<9.0.0",
    "Werkzeug>=2.3.7,<3.0.0",
    "Jinja2>=3.1.2,<4.0.0",
    "MarkupSafe>=2.1.3,<3.0.0",
    "itsdangerous>=2.1.2,<3.0.0",
    "blinker>=1.6.2,<2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
